[project]
name = "ai-docs-vector-db-hybrid-scraper"
version = "0.1.0"
description = "Hybrid AI documentation scraping system combining Crawl4AI (bulk) + Firecrawl MCP (on-demand) with Qdrant vector database for Codex/Claude Code/Gemini CLI, and more integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "Bjorn Melin" }]
keywords = [
    "ai",
    "vector-database",
    "documentation",
    "scraping",
    "crawl4ai",
    "firecrawl",
    "qdrant",
    "claude",
    "mcp",
    "embeddings",
    "search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    # Python 3.12+ unsupported until upstream GPU stack compatibility lands.
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "fastapi[standard]>=0.127.0,<1.0.0",
    "starlette>=0.50.0,<1.0.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "crawl4ai[all]>=0.7.8,<0.8.0",
    "firecrawl>=4.12.0,<5.0.0",
    "qdrant-client[fastembed]>=1.16.2,<2.0",
    "openai>=2.14.0,<3.0.0",
    "fastembed>=0.7.4,<0.8.0",
    "FlagEmbedding>=1.3.5,<2.0.0",
    "numpy>=2.4.0,<2.5.0",
    "scipy>=1.16.3,<2.0.0",
    "defusedxml>=0.7.1,<0.8.0",
    "aiohttp>=3.12.15,<4.0.0",
    "aiofiles>=25.1.0,<26.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "mcp>=1.25.0,<2.0.0",
    "fastmcp>=2.14.1,<3.0.0",
    "redis[hiredis]>=5.3.1,<6.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "platformdirs>=4.5.1,<5.0.0",
    "click>=8.3.1,<9.0.0",
    "rich>=14.2.0,<15.0.0",
    "questionary>=2.1.1,<3.0.0",
    "prometheus-client>=0.23.1,<0.24.0",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
    "sqlalchemy>=2.0.45,<3.0.0",
    "sqlmodel>=0.0.31,<0.1.0",
    "httpx>=0.28.1,<0.29.0",
    "browser-use>=0.11.2,<0.12.0",
    "playwright>=1.57.0,<2.0.0",
    "playwright-stealth>=2.0.0,<3.0.0",
    "langchain-anthropic>=1.3.0,<2.0.0",
    "langchain-google-genai>=4.1.2,<5.0.0",
    # dependency-injector wires core clients (OpenAI, Qdrant, Dragonfly, Firecrawl) via ApplicationContainer.
    "dependency-injector>=4.48.3",
    "scikit-learn>=1.8.0,<2.0.0",
    "langchain>=1.2.0,<2.0.0",
    "langchain-core>=1.2.5,<2.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "langchain-classic>=1.0.1,<2.0.0",
    "langchain-qdrant>=1.1.0,<2.0.0",
    "langchain-text-splitters>=1.1.0,<2.0.0",
    "langchain-openai>=1.1.6,<2.0.0",
    "langchain-mcp-adapters>=0.2.1,<1.0.0",
    "langgraph>=1.0.5,<2.0.0",
    "asgi-correlation-id>=4.3.4,<5.0.0",
    "purgatory>=3.0.1,<4.0.0",
    "aiolimiter>=1.2.1",
    "trafilatura>=2.0.0",
    "tiktoken>=0.12.0,<0.13.0",
    "anyio>=4.12.0,<5.0.0",
    "pydantic-core>=2.41.5,<3.0.0",
    "opentelemetry-api>=1.39.1,<2.0.0",
    "opentelemetry-sdk>=1.39.1,<2.0.0",
    "opentelemetry-exporter-otlp>=1.39.1,<2.0.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1,<10.0.0",
    "mkdocstrings>=1.0.0,<2.0.0",
    "mkdocstrings-python>=2.0.1,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "plotly>=6.5.0,<7.0.0",
    "streamlit>=1.52.2,<2.0.0",
]

[dependency-groups]
# Require ragas ≥0.3.5 to ensure llm_factory and modern SingleTurnSample schema
eval = ["ragas>=0.3.5,<1.0.0"]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "asgi-lifespan>=2.1.0,<3.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pytest-benchmark>=5.1.0,<6.0.0",
    "pytest-randomly>=4.0.1,<5.0.0",
    "hypothesis>=6.140.0,<7.0.0",
    "mutmut>=3.3.1,<4.0.0",
    "fakeredis>=2.32.0,<3.0.0",
    "coverage>=7.10.7,<8.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "ruff>=0.14.0,<0.15.0",
    "pylint>=4.0.0,<5.0.0",
    "pyright>=1.1.406,<2.0.0",
    "deptry>=0.23.1,<1.0.0",
    "locust>=2.37.10,<3.0.0",
    "respx>=0.22.0",
    "typer>=0.21.0,<0.22.0",
    "vulture>=2.14,<3.0.0",
]

# Documentation tooling (uv dependency group).
# Intentionally mirrors [project.optional-dependencies] docs above.
# - `docs` supports `pip install .[docs]` for end-users building documentation.
# - `docs-dev` supports `uv sync --group docs-dev` for uv-based dev workflows.
docs-dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1,<10.0.0",
    "mkdocstrings>=1.0.0,<2.0.0",
    "mkdocstrings-python>=2.0.1,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "plotly>=6.5.0,<7.0.0",
    "streamlit>=1.52.2,<2.0.0",
]

# Contract testing tools
contract = [
    "faker>=40.1.0,<41.0.0",
]

# Accessibility testing tools
accessibility = [
    "axe-core-python>=0.1.0,<1.0.0",
    "selenium>=4.39.0,<5.0.0",
    "playwright>=1.55.0,<2.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "lxml>=5.3.0,<6.0.0",
]

# LLM integrations (core AI functionality)
llm = [
    "langchain-anthropic>=1.3.0,<2.0.0",
    "langchain-google-genai>=4.1.2,<5.0.0",
    "sentence-transformers>=5.2.0,<6.0.0",
]

# Observability and monitoring
observability = [
    "opentelemetry-instrumentation-fastapi>=0.60b1,<0.61.0",
    "opentelemetry-instrumentation-httpx>=0.60b1,<0.61.0",
    "opentelemetry-instrumentation-requests>=0.60b1,<0.61.0",
    "opentelemetry-instrumentation-logging>=0.60b1,<0.61.0",
    "opentelemetry-exporter-prometheus>=0.60b1,<0.61.0",
    "opentelemetry-instrumentation-starlette>=0.60b1,<0.61.0",
    "psutil>=6.1.1",
]

obs = [
    "opentelemetry-api>=1.37.0,<2.0.0",
    "opentelemetry-sdk>=1.37.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.37.0,<2.0.0",
    "prometheus-client>=0.23.1,<0.24.0",
]

# GPU acceleration (optional AI/ML performance boost)
gpu = [
    # Core PyTorch stack (aligned with official compatibility matrix)
    "torch>=2.9.1,<2.10.0",
    "torchvision>=0.24.1,<0.25.0",
    "torchaudio>=2.9.1,<2.10.0",
    # Inference libraries with readily available wheels
    "transformers>=4.57.3,<5.0.0",
    "accelerate>=1.12.0,<2.0.0",
    # Optional optimization libs (may compile from source depending on platform)
    "bitsandbytes>=0.49.0,<1.0.0",
    "xformers>=0.0.33.post2,<0.0.34",
    "triton>=3.5.0,<4.0.0",
    "deepspeed>=0.18.3,<1.0.0",
    # flash-attn requires torch wheels at runtime; uv 0.7.x lacks the
    # extra-build-dependencies feature so torch remains co-installed via the group.
    "flash-attn>=2.8.3,<3.0.0",
]

server = [
    "brotli-asgi>=1.4.0,<2.0.0",
    "purgatory[redis]>=3.0.1,<4.0.0",
    "uvloop>=0.21.0,<1.0.0; platform_system != 'Windows'",
]

web = ["tavily-python>=0.7.12"]

[project.urls]
Homepage = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper"
Repository = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper"
Issues = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper/issues"

[project.scripts]
ai-docs = "src.cli.main:main"
manage-db = "src.manage_vector_db:main"
mcp-server = "src.unified_mcp_server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ===== Tool Configurations =====

[tool.ruff]
line-length = 88
target-version = "py311"
include = ["*.py", "*.pyi"]
src = ["src", "tests", "examples", "scripts"]
extend-exclude = [".github", "**/*.md", "**/*.yml", "**/*.yaml"]

[tool.ruff.lint]
select = [
    # Core Python style and syntax
    "D",  # pydocstyle - docstring formatting
    "E",  # pycodestyle - syntax errors
    "W",  # pycodestyle - warnings
    "F",  # pyflakes - undefined names, unused imports
    "I",  # isort - import sorting
    "UP", # pyupgrade - Python version upgrades
    # Code quality and bug detection
    "B",   # flake8-bugbear - bug detection
    "C4",  # flake8-comprehensions - list/dict comprehensions
    "SIM", # flake8-simplify - code simplification
    "RET", # flake8-return - return statement issues
    "RUF", # Ruff-specific rules
    # Best practices and modernization
    "PTH",  # flake8-use-pathlib - pathlib usage
    "PIE",  # flake8-pie - miscellaneous fixes
    "ERA",  # eradicate - remove commented code
    "PD",   # pandas-vet - pandas best practices
    "NPY",  # NumPy-specific rules
    "PERF", # perflint - performance issues
    "FURB", # refurb - code modernization
    # Additional rules for stricter Google styling
    "A",   # flake8-builtins - shadowing builtins
    "BLE", # flake8-blind-except - bare except clauses
    "COM", # flake8-commas - trailing commas
    "FBT", # flake8-boolean-trap - boolean positional args
    "ICN", # flake8-import-conventions - import naming
    "ISC", # flake8-implicit-str-concat - implicit string concatenation
    "Q",   # flake8-quotes - quote consistency
    "SLF", # flake8-self - private member access
    # Logging and debugging
    "LOG", # flake8-logging-format - logging format
    "T10", # flake8-debugger - debugger statements
    "T20", # flake8-print - print statements
    # Exception handling
    "TRY", # tryceratops - exception handling
]

ignore = [
    "S101",    # assert statements in tests
    "S108",    # insecure temp file usage (acceptable in tests)
    "S311",    # pseudo-random generators (acceptable for tests/non-crypto)
    "T20",     # print statements in CLI
    "COM812",  # trailing comma missing (formatter handles)
    "COM819",  # trailing comma prohibited
    "TRY003",  # Long messages outside exception class
    "ERA001",  # commented out code (too noisy)
    "TRY301",  # Raise to an inner function
    "TRY300",  # Consider moving to else (can change semantics)
    "RET505",  # superfluous-else-return
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "SLF001",  # private-member-access
    "TC001",   # typing-only-first-party-import
    "TC002",   # typing-only-third-party-import
    "TC003",   # typing-only-standard-library-import
    "SIM300",  # yoda-conditions
    "C408",    # unnecessary-collection-call
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument
    "FBT003",  # boolean-default-value-positional-argument
]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test files - more permissive
"tests/**/*" = [
    "S101",   # Allow assert statements
    "ARG001", # Allow unused arguments
    "F821",   # Allow undefined names in test mocking contexts
]
# CLI and utility scripts
"src/cli/**/*" = [
    "T20", # Allow print statements
]
# MCP tools - protocol-specific patterns
"src/mcp_tools/**/*" = [
    "ARG001", # Allow unused arguments for MCP protocol
]
# GPU utilities - optional dependencies that may not be installed
"src/utils/gpu.py" = [
    "F401", # Allow unused imports for optional GPU libraries
]
# Chaos orchestrator - development modules that don't exist yet
"src/automation/self_healing/intelligent_chaos_orchestrator.py" = [
    "F401", # Allow imports of non-existent chaos testing modules
]

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true
known-first-party = ["src", "tests"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"openai.ChatCompletion" = { msg = "Use the Responses API via openai.OpenAI" }
"openai.chat.completions.create" = { msg = "Use the Responses API via openai.OpenAI" }
"ragas.dataset_schema" = { msg = "Ragas >=0.3 ships EvaluationDataset in ragas" }

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests", "scripts", "examples"]
venvPath = "."
venv = ".venv"
exclude = [
    "build",
    "dist",
    "docs",
    "site",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false

[[tool.pyright.executionEnvironments]]
root = "src/models"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src/config"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src/services"
typeCheckingMode = "standard"

[[tool.pyright.executionEnvironments]]
root = "tests"
typeCheckingMode = "basic"

[[tool.pyright.executionEnvironments]]
root = "examples"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
minversion = "8.4"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*", "*Tests", "*Test"]
considerfailures = true
tb_native = true
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--durations=10",
    "--maxfail=5",
    "--import-mode=prepend",
    "--showlocals",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--randomly-seed=42",
    "--randomly-dont-reset-seed",
    "-q",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:.*playwright.*",
    "ignore:pkg_resources is deprecated as an API\\.:DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:jsonschema\\.exceptions\\.RefResolutionError is deprecated:DeprecationWarning",
    "ignore:read_text is deprecated:DeprecationWarning",
    "ignore:open_text is deprecated:DeprecationWarning",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:unclosed <socket\\.socket:ResourceWarning",
]
markers = [
    "accessibility: mark test as accessibility test",
    "ai: mark test as AI/ML specific",
    "api_latency: mark test as API latency monitoring coverage",
    "authentication: mark test as authentication test",
    "authorization: mark test as authorization test",
    "baseline: baseline comparisons for regression tracking",
    "benchmark: mark test as benchmark test",
    "browser: mark test as browser automation test",
    "chaos: chaos and failure injection tests",
    "cli: mark test as CLI-specific",
    "comparison: comparison harness coverage for legacy migrations",
    "compatibility: cross-version compatibility scenarios",
    "component: component-level integration coverage",
    "config: configuration model tests",
    "cpu: CPU performance validation",
    "database: mark test as requiring database",
    "data_protection: data protection compliance checks",
    "data_sanitization: sanitization and scrubbing behaviours",
    "dependency_injection: dependency injection container tests",
    "e2e: End-to-end tests (full pipeline)",
    "embedding: Embedding-related tests",
    "endurance: mark test as endurance test",
    "fast: Fast unit tests (<100ms each)",
    "framework_resolution: framework resolution logic tests",
    "hypothesis: mark test as property-based using Hypothesis",
    "input_validation: mark test as input validation test",
    "interactive: mark test as requiring interactive features",
    "latency_validation: latency threshold enforcement",
    "load: mark test as load test",
    "memory: memory footprint validation",
    "models: model schema coverage",
    "modern: modern platform focused tests",
    "monitoring: observability pipeline validation",
    "network: network-dependent scenarios",
    "observability: observability configuration coverage",
    "performance: Performance and benchmark tests",
    "pii_detection: personally identifiable information detection",
    "property: mark test as property-based test",
    "property_based: property-based regression checks",
    "query_processing: query processing pipelines",
    "questionary: mark test as requiring questionary interactions",
    "rag: RAG system tests",
    "rate_limit: mark test as rate limit test",
    "rbac: role-based access control flows",
    "recorded: recorded HTTP interactions",
    "responsive: responsiveness validation",
    "respx: mark test as using respx HTTP mocking",
    "respx_compatibility: respx compatibility surface checks",
    "rich: mark test as requiring Rich console features",
    "security: security-focused scenarios",
    "service: Service integration tests (<5s each)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "spike: mark test as spike test",
    "stress: mark test as stress test",
    "throughput: throughput testing workloads",
    "throughput_validation: throughput threshold enforcement",
    "unit: marks tests as unit tests",
    "vector_db: Vector database tests",
    "visual: visual regression scenarios",
    "volume: mark test as volume test",
    "vulnerability: mark test as vulnerability test",
    "asyncio: marks tests as async tests",
    "optional_deps: depends on optional libraries",
]
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts_parallel = ["--dist=worksteal", "--tx=auto", "-q"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/cli/unified.py",
    "src/cli/commands/setup.py",
    "src/cli/wizard/*",
    "src/crawl4ai_bulk_embedder.py",
    "src/infrastructure/container.py",
    "src/manage_vector_db.py",
    "src/services/processing/*",
    "src/services/observability/health_manager.py",
    "src/services/vector_db/service.py",
    "src/unified_mcp_server.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# ===== UV Package Manager Configuration =====
[tool.uv]
managed = true
package = true
# UV performance optimizations
compile-bytecode = true
link-mode = "copy"       # Better for Docker builds
default-groups = ["dev"]
preview = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.mutmut]
paths_to_mutate = ["src/config/"]
runner = "uv run pytest -x tests/unit/core/test_constants.py tests/unit/config/ -m \"unit and fast\" -q"
exclude_patterns = ["__pycache__", "*.pyc", "migrations/"]
cache_dir = ".mutmut-cache"
backup = true
only_covered_lines = true

# ===== Dependency Groups =====
[tool.pylint]
[tool.pylint.main]
# Basic configuration
extension-pkg-allow-list = ["pydantic"]
reports = false
score = true
recursive = true
py-version = "3.11"

[tool.pylint.messages_control]
# Conservative disable list - only genuinely problematic rules
disable = [
    "too-few-public-methods", # Common in test classes with just __init__
    "invalid-name",           # Test functions/methods often use unconventional names
    "protected-access",       # Tests often need to access protected members
    "broad-except",           # Tests may use broad exception handling for mocking
    # Test-specific rules that are commonly problematic
    "unused-argument",            # W0613 - Fixtures and mocks often have unused parameters
    "redefined-outer-name",       # W0621 - Common when fixtures redefine names
    "pointless-string-statement", # W0105 - Duplicate docstrings in test classes
    "line-too-long",              # C0301 - Test code often has long lines due to complex setup
    "unnecessary-ellipsis",       # W1401 - Unnecessary ellipsis in test code
    "import-outside-toplevel",    # C0415 - import-outside-toplevel
    # Globally relax complexity thresholds to focus lint on correctness issues
    "too-many-arguments", # R0913 - allowed by design in some service APIs
    "too-many-locals",    # R0914 - complex operations in limited modules
    "too-many-branches",  # R0912 - controlled complexity in orchestrators
]
